background gradient overflow fix

--- a/client/src/components/explore/explore.css
+++ b/client/src/components/explore/explore.css
@@ -1,6 +1,7 @@
 .explore {
   width: 100%;
   height: 100%;
+  margin-top: 65px;
 }
 .explore_title h3 {
   font-family: "Open Sans";
